<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_general">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_buy"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/sell_warn" />

    <LinearLayout
        android:id="@+id/layout_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_is_colored"
            style="@style/Button.General"
            android:layout_width="@dimen/size_btn"
            android:layout_height="wrap_content"
            android:text="@string/sell_colored" />

        <Button
            android:id="@+id/btn_is_top"
            style="@style/Button.General"
            android:layout_width="@dimen/size_btn"
            android:layout_height="wrap_content"
            android:text="@string/sell_top" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_my_adverts_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layout_buy"
        android:gravity="center_horizontal|bottom"
        android:text="@string/sell_warn_success"
        android:textSize="12sp" />
</RelativeLayout>